perbagus jadi tema pixel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Hai, Nama ku Zidan!</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="portofolio.css"/>
+    <link rel="icon" href="IMG/favicon.ico" sizes="any">
     <script src="portofolio.js" defer></script>
 </head>
 <body>
@@ -27,7 +28,7 @@
                     <h1>M ZIDAN RURIANO AG</h1>
                     <p>Ilmu Komputer | 241401063</p>
                     <p>KOM: C</p>
-                    <p>Email: zidanruriano@gmail.com</p>
+                    <p>Email: Zidanruriano@gmail.com</p>
                 </div>
         </div>
     </div>
@@ -131,12 +132,14 @@
                 <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="instagram" width="32" style="vertical-align:middle;">
             </a>    
         </div>
-        <br>  
+
+        <br>
+
         <span id="sapa-container"></span> 
 	</div>
     <footer class="footer">
         <div class="footer-inner">
-            <span>&copy; 2025 Zidan Ruriano</span> | Ilmu Komputer USU</span>
+            <span>2025 Zidan Ruriano</span> | Ilmu Komputer USU
         </div>
     </footer>
 </body>
